--- a/Blazor_Recipe/Blazor_Recipe/Components/App.razor
+++ b/Blazor_Recipe/Blazor_Recipe/Components/App.razor
@@ -5,20 +5,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="Blazor_Recipe.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="_content/Material.Blazor/material-components-web.min.css" rel="stylesheet" />
-    <link href="_content/Material.Blazor/material.blazor.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <HeadOutlet />
 </head>
 
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
-    <script src="_content/Material.Blazor/material.blazor.min.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
