--- a/Blazor_Recipe/Blazor_Recipe/wwwroot/app.css
+++ b/Blazor_Recipe/Blazor_Recipe/wwwroot/app.css
@@ -13,7 +13,7 @@ a, .btn-link {
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 .content {
@@ -34,6 +34,18 @@ h1:focus {
 
 .validation-message {
     color: #e51070;
+}
+
+.recipe-image {
+    border-width: 4px;
+    border-style: double;
+    border-radius: 8px;
+}
+
+@media screen and (max-width: 600px) {
+    .divider {
+        display: none;
+    }
 }
 
 .blazor-error-boundary {
