--- a/Blazor_Recipe/Blazor_Recipe.Client/Components/RecipeSearch.razor
+++ b/Blazor_Recipe/Blazor_Recipe.Client/Components/RecipeSearch.razor
@@ -1,20 +1,48 @@
 ﻿@attribute [RenderModeInteractiveAuto]
+<MudPaper>
+    <MudGrid Class="pa-4 mud-height-full">
 
-<MudPaper Outlined="true" Class="pa-4 mud-height-full justify-space-between">
-    <MudForm Class="d-flex align-end gap-4">
-        <MudTextField T="string" Label="Search"></MudTextField>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="@((_) => DoSomething(_))">Search</MudButton>
-    </MudForm>
+        <MudItem xs="8">
+            <MudTextField @bind-Value="textValue" Label="Ingredient" Variant="Variant.Text" />
+        </MudItem>
+
+        <MudItem xs="4">
+            <MudButton Variant=" Variant.Text" Color="Color.Secondary" OnClick="AddChips" EndIcon="@Icons.Material.Filled.Add">Add ingredient </MudButton>
+        </MudItem>
+        <MudItem xs="12">
+            <MudChipSet AllClosable="true" OnClose="ClosedChips">
+                @foreach (string value in chipValues)
+                {
+                    <MudChip Text="@value" Variant="Variant.Outlined" Color="Color.Secondary" />
+                }
+            </MudChipSet>
+        </MudItem>
+        <MudItem xs="8"></MudItem>
+        <MudItem xs="4">
+            <MudButton Variant=" Variant.Filled" Color="Color.Secondary" OnClick="@(() => SearchIngredients())">Search by ingredients</MudButton>
+        </MudItem>
+    </MudGrid>
 </MudPaper>
+
 @code {
+    private int chipIndex = 0;
+    private List<string> chipValues = new List<string>();
+    private string textValue { get; set; }
 
     [Parameter]
-    public EventCallback<string> OnClickCallback { get; set; }
+    public EventCallback<List<string>> SearchIngredientsCallback { get; set; }
 
-    public async Task DoSomething(MouseEventArgs _)
+    private async Task SearchIngredients()
     {
-        Console.WriteLine("here");
-        await OnClickCallback.InvokeAsync("milk");
+        await SearchIngredientsCallback.InvokeAsync(chipValues);
     }
-
+    private void AddChips()
+    {
+        chipValues.Add(textValue);
+        textValue = string.Empty;
+    }
+    private void ClosedChips(MudChip chip)
+    {
+        chipValues.Remove(chip.Text);
+    }
 }
