--- a/Blazor_Recipe/Blazor_Recipe/Components/Layout/MainLayout.razor
+++ b/Blazor_Recipe/Blazor_Recipe/Components/Layout/MainLayout.razor
@@ -9,13 +9,12 @@
     <MudMainContent>
         <MudContainer MaxWidth="MaxWidth.Medium">
             @Body
+            <MudScrollToTop TopOffset="50">
+                <MudFab Color="Color.Tertiary" Icon="@Icons.Material.Filled.ArrowCircleUp" />
+            </MudScrollToTop>
         </MudContainer>
+
     </MudMainContent>
+
 </MudLayout>
 
-@* <div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
-</div>
- *@
