--- a/Blazor_Recipe/Blazor_Recipe/Components/_Imports.razor
+++ b/Blazor_Recipe/Blazor_Recipe/Components/_Imports.razor
@@ -7,6 +7,6 @@
 @using Microsoft.JSInterop
 @using Blazor_Recipe
 @using Blazor_Recipe.Client
-@using Blazor_Recipe.Client.Components
 @using Blazor_Recipe.Components
+@using Blazor_Recipe.Components.Components
 @using MudBlazor
