Changed the font.

--- a/Blazor_Recipe/Blazor_Recipe/Components/Layout/MainLayout.razor
+++ b/Blazor_Recipe/Blazor_Recipe/Components/Layout/MainLayout.razor
@@ -39,6 +39,11 @@
             },
             Typography = new Typography
             {
+                Default = new Default
+                {
+                    FontSize = "1.0rem",
+                    FontFamily = new string[] { "Raleway", "Helvetica", "Arial", "sans-serif" }
+                },
                 Body1 = new Body1
                 {
                     FontSize = "1.2rem"
