--- a/Blazor_Recipe/Blazor_Recipe/Components/Pages/Home.razor
+++ b/Blazor_Recipe/Blazor_Recipe/Components/Pages/Home.razor
@@ -2,18 +2,29 @@
 @inject Shared.RecipeService RecipeService
 <PageTitle>Home</PageTitle>
 
-@attribute [RenderModeInteractiveServer]
+@attribute [RenderModeInteractiveServer(false)]
 @attribute [StreamRendering(true)]
 
 <MudContainer MaxWidth="MaxWidth.Large">
 
-    <RecipeSearch SearchIngredientsCallback="@GetRecipes" />
-    <MudRadioGroup @bind-SelectedOption="@useFakeApiCall">
-        <MudRadio Option="@(true)" Color="Color.Primary">Use Fake API Call</MudRadio>
-        <MudRadio Option="@(false)" Color="Color.Primary">Use Real API Call (has a daily quota) @apiQuota</MudRadio>
-        </MudRadioGroup>
-        <div class="mt-8" />
-        @if (_recipes is null)
+    <MudPaper Elevation="5">
+        <RecipeSearch SearchIngredientsCallback="@GetRecipes" />
+        <div class="mt-4 pa-4">
+            @if (apiQuota is null)
+            {
+                <MudText Typo="Typo.h5">Loading...</MudText>
+            }
+            else
+            {
+                <MudRadioGroup @bind-SelectedOption="@useFakeApiCall">
+                    <MudRadio Option="@(true)" Color="Color.Primary">Use Fake API Call (ingredients ignored)</MudRadio>
+                    <MudRadio Option="@(false)" Color="Color.Primary">Use Real API Call (has a daily quota) @apiQuota</MudRadio>
+                    </MudRadioGroup>
+            }
+        </div>
+    </MudPaper>
+    <div class="mt-8" />
+    @if (_recipes is null)
     {
         <MudText Typo="Typo.h5">Loading Recipes...</MudText>
     }
@@ -37,6 +48,8 @@
     protected override async Task OnInitializedAsync()
     {
         _recipes = Enumerable.Empty<Shared.Models.Recipe>();
+        double result = await RecipeService.GetQuota();
+        SetQuotaString(result);
     }
 
     private async Task GetRecipes(List<string> ingredients)
@@ -51,8 +64,16 @@
         {
             var result = await RecipeService.GetRecipesAsync(ingredients);
             _recipes = result.Recipes;
-            apiQuota = result.ApiQuota != null ? $": {result.ApiQuota}/150 left" : null;
+            SetQuotaString(result.ApiQuota);
         }
 
+    }
+
+    private void SetQuotaString(double? quota)
+    {
+        if (quota != null)
+        {
+            apiQuota = $": {quota}/150 left";
+        }
     }
 }
