--- a/Blazor_Recipe/Blazor_Recipe/Components/Components/RecipeSearch.razor
+++ b/Blazor_Recipe/Blazor_Recipe/Components/Components/RecipeSearch.razor
@@ -2,21 +2,23 @@
 
 <MudGrid Class="pa-4 mud-height-full">
 
-    <MudForm @ref="@form">
+    <MudForm Model="ingredientList" @ref="@form" Validation="@(ingredientListValidator.Validation)">
         <MudItem xs="8">
-            <MudTextField @bind-Value="textValue" Label="Ingredient" Variant="Variant.Text" Validation="@(ingredientValidator.Validation)" />
+            <MudTextField @bind-Value="ingredientList.SelectedIngredient" Label="Ingredient" Variant="Variant.Text" For="@(() => ingredientList.SelectedIngredient)" />
         </MudItem>
         <MudItem xs="4">
             <MudButton Variant=" Variant.Text" Color="Color.Primary" OnClick="AddChips" EndIcon="@Icons.Material.Filled.Add">Add ingredient </MudButton>
         </MudItem>
     </MudForm>
     <MudItem xs="12">
-        <MudChipSet AllClosable="true" OnClose="ClosedChips" @bind-Value="chipValues">
-            @foreach (string value in chipValues)
+        <MudChipSet AllClosable="true" OnClose="ClosedChips" @bind-Value="ingredientList">
+            @foreach (string value in ingredientList.Ingredients)
             {
                 <MudChip Text="@value" Color="Color.Primary" />
             }
         </MudChipSet>
+        @*         <ValidationMessage For="() => ingredientList.Ingredients" />
+        *@
     </MudItem>
 
     <MudItem xs="8"></MudItem>
@@ -28,9 +30,7 @@
 
 
 @code {
-    private List<string> chipValues = new List<string>();
-    private string textValue { get; set; } = string.Empty;
-    private IngredientValidator ingredientValidator = new();
+    private Shared.Models.IngredientList ingredientList = new() { Ingredients = new List<string> { }, SelectedIngredient = string.Empty };
     private IngredientListValidator ingredientListValidator = new();
     private MudForm form;
 
@@ -39,24 +39,25 @@
 
     private async Task SearchIngredients()
     {
-        await SearchIngredientsCallback.InvokeAsync(chipValues);
+        await SearchIngredientsCallback.InvokeAsync(ingredientList.Ingredients.ToList());
     }
     private async Task AddChips()
     {
+        Console.WriteLine($"selected: {ingredientList.SelectedIngredient}");
 
         await form.Validate();
 
         if (form.IsValid)
         {
-            chipValues.Add(textValue);
-            textValue = string.Empty;
+            ingredientList.Ingredients.Add(ingredientList.SelectedIngredient);
+            ingredientList.SelectedIngredient = string.Empty;
         }
 
-        Console.WriteLine($"chip values: {string.Join(";", chipValues.Select(x => x))}");
+        Console.WriteLine($"chip values: {string.Join(";", ingredientList.Ingredients.Select(x => x))}");
     }
     private void ClosedChips(MudChip chip)
     {
-        chipValues.Remove(chip.Text);
+        ingredientList.Ingredients.Remove(chip.Text);
     }
 
 }
