--- a/Blazor_Recipe/Blazor_Recipe/Components/Layout/MainLayout.razor
+++ b/Blazor_Recipe/Blazor_Recipe/Components/Layout/MainLayout.razor
@@ -6,7 +6,7 @@
 
 <MudLayout>
     <MudAppBar Color="Color.Primary" Elevation="1">
-        <MudText Typo="Typo.h4" Color="Color.Inherit">Some Kind of Awesome Recipe App</MudText>
+        <MudText Typo="Typo.h4" Color="Color.Inherit" Class="pa-4">Some Kind of Awesome Recipe App</MudText>
         <MudSpacer />
         <MudIconButton Icon="@Icons.Material.Filled.Home" Color="Color.Inherit" Edge="Edge.End" Href="/" />
     </MudAppBar>
