--- a/Blazor_Recipe/Blazor_Recipe/Components/Components/RecipeSearch.razor
+++ b/Blazor_Recipe/Blazor_Recipe/Components/Components/RecipeSearch.razor
@@ -3,23 +3,26 @@
 <MudGrid Class="pa-4 mud-height-full">
 
     <MudItem xs="12">
-        <MudForm @ref="@form">
+        <EditForm Model="@ingredientList" OnValidSubmit="@AddChips">
+            <DataAnnotationsValidator />
+
             <MudGrid>
                 <MudItem xs="8">
-                    <MudTextField @bind-Value="textValue" Label="Ingredient" Variant="Variant.Text" />
+                    <MudTextField @bind-Value="ingredientList.SelectedIngredient" Label="Ingredient" Variant="Variant.Text"
+                                  For="@(() => ingredientList.SelectedIngredient)" />
                 </MudItem>
                 <MudItem xs="4">
-                    <MudButton Variant=" Variant.Text" Color="Color.Primary" OnClick="AddChips"
+                    <MudButton ButtonType="ButtonType.Submit" Variant=" Variant.Text" Color="Color.Primary"
                                EndIcon="@Icons.Material.Filled.Add">
                         Add ingredient
                     </MudButton>
                 </MudItem>
             </MudGrid>
-        </MudForm>
+        </EditForm>
     </MudItem>
     <MudItem xs="12">
-        <MudChipSet AllClosable="true" OnClose="ClosedChips" @bind-Value="chipValues">
-            @foreach (string value in chipValues)
+        <MudChipSet AllClosable="true" OnClose="ClosedChips" @bind-Value="ingredientList">
+            @foreach (string value in ingredientList.Ingredients)
             {
                 <MudChip Text="@value" Color="Color.Primary" />
             }
@@ -28,8 +31,7 @@
 
     <MudItem xs="8"></MudItem>
     <MudItem xs="4">
-        <MudButton Variant=" Variant.Filled" Color="Color.Primary"
-                   OnClick="@(() => SearchIngredients())">
+        <MudButton Variant=" Variant.Filled" Color="Color.Primary" OnClick="@(() => SearchIngredients())">
             Search by ingredients
         </MudButton>
     </MudItem>
@@ -38,34 +40,31 @@
 
 
 @code {
-    private List<string> chipValues = new List<string>();
-    private string textValue { get; set; } = string.Empty;
-    private IngredientListValidator ingredientListValidator = new();
-    private MudForm form;
+    private Shared.Models.IngredientList ingredientList = new()
+        {
+            Ingredients = new List<string> { },
+            SelectedIngredient = string.Empty
+        };
 
     [Parameter]
     public EventCallback<List<string>> SearchIngredientsCallback { get; set; }
 
     private async Task SearchIngredients()
     {
-        await SearchIngredientsCallback.InvokeAsync(chipValues);
+        await SearchIngredientsCallback.InvokeAsync(ingredientList.Ingredients.ToList());
     }
     private async Task AddChips()
     {
+        Console.WriteLine($"selected: {ingredientList.SelectedIngredient}");
 
-        await form.Validate();
+        ingredientList.Ingredients.Add(ingredientList.SelectedIngredient);
+        ingredientList.SelectedIngredient = string.Empty;
 
-        if (form.IsValid)
-        {
-            chipValues.Add(textValue);
-            textValue = string.Empty;
-        }
-
-        Console.WriteLine($"chip values: {string.Join(";", chipValues.Select(x => x))}");
+        Console.WriteLine($"chip values: {string.Join(";", ingredientList.Ingredients.Select(x => x))}");
     }
     private void ClosedChips(MudChip chip)
     {
-        chipValues.Remove(chip.Text);
+        ingredientList.Ingredients.Remove(chip.Text);
     }
 
 }
