--- a/Blazor_Recipe/Blazor_Recipe.Client/Components/RecipeImage.razor
+++ b/Blazor_Recipe/Blazor_Recipe.Client/Components/RecipeImage.razor
@@ -38,7 +38,7 @@
 
     private void ButtonClick()
     {
-        Console.WriteLine($"{DateTime.Now.ToLongTimeString()}: Clicking a button on render mode {@RenderMode}.");
+        Log.Logger.Information($"{DateTime.Now.ToLongTimeString()}: Clicking a button on render mode {@RenderMode}.");
         showImage = true;
     }
 
