--- a/Blazor_Recipe/Blazor_Recipe/_Imports.razor
+++ b/Blazor_Recipe/Blazor_Recipe/_Imports.razor
@@ -9,3 +9,4 @@
 @using Blazor_Recipe.Client
 @using Blazor_Recipe.Components
 @using MudBlazor
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
