--- a/Blazor_Recipe/Blazor_Recipe/Components/Components/RecipeCard.razor
+++ b/Blazor_Recipe/Blazor_Recipe/Components/Components/RecipeCard.razor
@@ -2,38 +2,39 @@
 
     <MudCardHeader>
         <MudLink Underline="Underline.Hover" Typo="Typo.h5" Href="@Recipe.Url" Target="_blank">@Recipe.Name </MudLink>
-        </MudCardHeader>
-        <MudCardContent>
-            <MudGrid>
-                <MudItem sm="6" xs="9">
-                    <MudText Typo="Typo.body1"> @((MarkupString)Recipe.Summary)</MudText>
-                </MudItem>
-                <MudItem sm="1" xs="0">
-                    <MudDivider Class="divider" Vertical="true" DividerType="DividerType.Middle" />
-                </MudItem>
-                <MudItem sm="5" xs="3">
-                    <MudImage Src=@Recipe.ImageUrl Class="recipe-image" Style="@($"border-color:var(--mud-palette-primary-darken);")" Fluid="true" />
-                    <MudLink Href="@($"/details/{Recipe.Id}/{Recipe.Name}")" Underline="Underline.Hover">
-                        <MudText Align="Align.Center">Details</MudText>
-                    </MudLink>
-                </MudItem>
-                <MudItem xs="4">
-                    <IngredientList ListName="Used Ingredients" Ingredients="@Recipe.UsedIngredients" />
-                </MudItem>
-                <MudItem xs="4">
-                    <IngredientList ListName="Missing Ingredients" Ingredients="@Recipe.MissedIngredients" />
-                </MudItem>
-                <MudItem xs="4">
-                    <IngredientList ListName="Unused Ingredients" Ingredients="@Recipe.UnusedIngredients" />
-                </MudItem>
+    </MudCardHeader>
+    <MudCardContent>
+        <MudGrid>
+            <MudItem sm="6" xs="9">
+                <MudText Typo="Typo.body1"> @((MarkupString)Recipe.Summary)</MudText>
+            </MudItem>
+            <MudItem sm="1" xs="0">
+                <MudDivider Class="divider" Vertical="true" DividerType="DividerType.Middle" />
+            </MudItem>
+            <MudItem sm="5" xs="3">
+                <MudImage Src=@Recipe.ImageUrl Class="recipe-image"
+                          Style="@($"border-color:var(--mud-palette-primary-darken);")" Fluid="true" />
+                <MudLink Href="@($"/details/{Recipe.Id}/{Recipe.Name}")" Underline="Underline.Hover">
+                    <MudText Align="Align.Center">Details</MudText>
+                </MudLink>
+            </MudItem>
+            <MudItem xs="4">
+                <IngredientList ListName="Used Ingredients" Ingredients="@Recipe.UsedIngredients" />
+            </MudItem>
+            <MudItem xs="4">
+                <IngredientList ListName="Missing Ingredients" Ingredients="@Recipe.MissedIngredients" />
+            </MudItem>
+            <MudItem xs="4">
+                <IngredientList ListName="Unused Ingredients" Ingredients="@Recipe.UnusedIngredients" />
+            </MudItem>
 
-            </MudGrid>
-        </MudCardContent>
+        </MudGrid>
+    </MudCardContent>
 
-    </MudCard>
+</MudCard>
 
 
-    @code {
+@code {
 
     [Parameter]
     public Shared.Models.Recipe Recipe { get; set; }
